...
  const val CONFIRMATION_DIALOG_TITLE = "ConfirmationDialogTitle"
  const val CONFIRMATION_DIALOG_MESSAGE = "ConfirmationDialogMessage"
  const val CONFIRMATION_DIALOG_CONFIRM = "ConfirmationDialogConfirm"
  const val CONFIRMATION_DIALOG_CANCEL = "ConfirmationDialogCancel"
  const val CLOSABLE_TOAST = "ClosableToast"
  const val CLOSABLE_TOAST_CLOSE_BUTTON = "ClosableToastCloseButton"
  const val USER_PROFILE_POPUP_DESCRIPTION = "UserProfilePopupDescription"
  const val USER_PROFILE_POPUP_HANDLE = "UserProfilePopupHandle"
  const val USER_PROFILE_POPUP_USERNAME = "UserProfilePopupUsername"
  const val USER_PROFILE_POPUP_AVATAR = "UserProfilePopupAvatar"
  const val USER_PROFILE_POPUP_BLOCK_BUTTON = "UserProfilePopupBlockButton"
  const val USER_PROFILE_POPUP_SEND_REQUEST_BUTTON = "UserProfilePopupSendRequestButton"
  const val USER_PROFILE_POPUP_REMOVE_FRIEND_BUTTON = "UserProfilePopupRemoveFriendButton"
}

// The default size for the image carousel.
val CAROUSEL_SIZE = 260.dp
val SNACKBAR_OFFSET = 50.dp
...
                      onTextLayout = { textLayoutResult ->
                        showShowMore = textLayoutResult.hasVisualOverflow
                      })

                  if (showShowMore || isExpanded) {
                    Text(
                        text = if (isExpanded) "Show less" else "Show more",
                        color =
                            AppColors.textIcons.copy(
                                alpha = Dimensions.Alpha.dialogIconTranslucent),
                        fontSize = Dimensions.TextSize.standard,
                        modifier =
                            Modifier.padding(top = Dimensions.Spacing.small).clickable {
...
                                  PaddingValues(vertical = Dimensions.Spacing.extraLarge)) {
                                Icon(
                                    imageVector =
                                        if (isRequestSent) Icons.Default.Person
                                        else Icons.Default.PersonAdd,
                                    contentDescription =
                                        if (isRequestSent) "Cancel request"
                                        else "Send friend request",
                                    tint = AppColors.textIcons,
                                    modifier = Modifier.size(Dimensions.IconSize.standard))
                                Spacer(modifier = Modifier.width(Dimensions.Spacing.medium))
                                Text(
                                    text =
...
